# adreport

./: .env.example  .gitattributes  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
adreport/: __init__.py  config.py
adreport/bot/: __init__.py
adreport/cli/: __init__.py
adreport/core/: collector.py  gateway.py  metrics.py  models.py  storage.py
adreport/core/report/: builder.py  chart.py
adreport/core/report/render/: __init__.py  _fontcfg.py  _winlibs.py  filters.py  pdf.py  png.py
adreport/core/report/templates/: card.html  post.html
fixtures/: demo_full.json  demo_public.json
tests/: conftest.py  test_bot.py  test_builder.py  test_collector.py  test_gateway.py  test_golden_render.py  test_metrics.py  test_storage.py
