[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "adreport"
version = "0.1.0"
description = "Отчёты по постам Telegram-каналов: PDF и PNG-карточка вместо скриншотов статистики"
requires-python = ">=3.12"
dependencies = [
    "typer>=0.12",
    "jinja2>=3.1",
    "weasyprint>=62",
    "pypdfium2>=4.30",
    "pillow>=10",
    "telethon>=1.36",
    "sqlalchemy>=2.0",
    "python-dotenv>=1.0",
    "tzdata>=2024.1",
]

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.scripts]
adreport = "adreport.cli:app"

[tool.setuptools.packages.find]
include = ["adreport*"]

[tool.setuptools.package-data]
"adreport.core.report" = ["templates/*.html", "templates/fonts/*"]
